@@ -472,6 +472,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|processor
+operator|.
+name|UpdateRequestProcessorChain
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -2719,60 +2735,29 @@ operator|new
 name|SolrQueryResponse
 argument_list|()
 decl_stmt|;
-comment|// TODO: use the standard update processor chain now that it has support to skip processors before the DistributedUpdateProcessor?
-name|RunUpdateProcessorFactory
-name|runFac
+name|UpdateRequestProcessorChain
+name|processorChain
 init|=
-operator|new
-name|RunUpdateProcessorFactory
-argument_list|()
-decl_stmt|;
-name|DistributedUpdateProcessorFactory
-name|magicFac
-init|=
-operator|new
-name|DistributedUpdateProcessorFactory
-argument_list|()
-decl_stmt|;
-name|runFac
+name|req
 operator|.
-name|init
-argument_list|(
-operator|new
-name|NamedList
+name|getCore
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|magicFac
 operator|.
-name|init
+name|getUpdateProcessingChain
 argument_list|(
-operator|new
-name|NamedList
-argument_list|()
+literal|null
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|UpdateRequestProcessor
 name|proc
 init|=
-name|magicFac
+name|processorChain
 operator|.
-name|getInstance
+name|createProcessor
 argument_list|(
 name|req
 argument_list|,
 name|rsp
-argument_list|,
-name|runFac
-operator|.
-name|getInstance
-argument_list|(
-name|req
-argument_list|,
-name|rsp
-argument_list|,
-literal|null
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|Collections
