@@ -116,6 +116,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|ExecutorUtil
@@ -280,6 +296,22 @@ name|update
 operator|.
 name|processor
 operator|.
+name|DistributingUpdateProcessorFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|processor
+operator|.
 name|RunUpdateProcessorFactory
 import|;
 end_import
@@ -297,6 +329,22 @@ operator|.
 name|processor
 operator|.
 name|UpdateRequestProcessor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|processor
+operator|.
+name|UpdateRequestProcessorChain
 import|;
 end_import
 
@@ -5662,60 +5710,29 @@ argument_list|)
 expr_stmt|;
 comment|// NOTE: we don't currently handle a core reload during recovery.  This would cause the core
 comment|// to change underneath us.
-comment|// TODO: use the standard request factory?  We won't get any custom configuration instantiating this way.
-name|RunUpdateProcessorFactory
-name|runFac
+name|UpdateRequestProcessorChain
+name|processorChain
 init|=
-operator|new
-name|RunUpdateProcessorFactory
-argument_list|()
-decl_stmt|;
-name|DistributedUpdateProcessorFactory
-name|magicFac
-init|=
-operator|new
-name|DistributedUpdateProcessorFactory
-argument_list|()
-decl_stmt|;
-name|runFac
+name|req
 operator|.
-name|init
-argument_list|(
-operator|new
-name|NamedList
+name|getCore
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|magicFac
 operator|.
-name|init
+name|getUpdateProcessingChain
 argument_list|(
-operator|new
-name|NamedList
-argument_list|()
+literal|null
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|UpdateRequestProcessor
 name|proc
 init|=
-name|magicFac
+name|processorChain
 operator|.
-name|getInstance
+name|createProcessor
 argument_list|(
 name|req
 argument_list|,
 name|rsp
-argument_list|,
-name|runFac
-operator|.
-name|getInstance
-argument_list|(
-name|req
-argument_list|,
-name|rsp
-argument_list|,
-literal|null
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|long
